--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,31 @@
+# Just name it
 name: Deployment From Github To AWS
+
+# Specify rules for the GitHib action to kick-off:
+# - on push to master branch
 on:
   push:
     branches:
       - master
+
+# Build a job
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Latest Repo
         uses: actions/checkout@master
-        
-      - name: Generate Deployment Package 
+
+      - name: Generate Deployment Package
+        # Recursively zip everything into 'deploy.zip' except for any node moduels
         run: zip -r deploy.zip * -x "**node_modules**"
-        
+
+    # Only used to get a unique timestamp for upload/versioning
       - name: Get timestamp
         uses: gerred/actions/current-time@master
         id: current-time
-        
+
+    # Take in time from above step; run regex to format time
       - name: Run string replace
         uses: frabert/replace-string-action@master
         id: format-time
@@ -25,15 +34,14 @@ jobs:
           string: "${{ steps.current-time.outputs.time }}"
           replace-with: '-'
           flags: 'g'
-          
+
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v14
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: simple-engineer-deployment-tutorial
-          environment_name: SimpleEngineerDeploymentTutorial-env
-          version_label: "the-simple-engineer-deployment-${{ steps.format-time.outputs.replaced }}"
+          application_name: simple-engineer-deployment
+          environment_name: Simpleengineereeployment-env
+          version_label: "simple-engineer-deployment-${{ steps.format-time.outputs.replaced }}"
           region: us-east-2
           deployment_package: deploy.zip
-    
